--- a/app/views/games/tutorial.html.erb
+++ b/app/views/games/tutorial.html.erb
@@ -1,1 +1,6 @@
 <h1>Play the tutorial </h1>
+
+<p><%= @description %></p>
+
+<%= button_to "Donate to #{@charityOne}", results_path, method: :get, :params => {:charity => 'hi'} %>
+<%= button_to "Donate to #{@charityTwo}", results_path(:charity => @charityTwo), :style => 'margin-top: 10px'%>
