make results action a POST so params are passed

--- a/app/views/games/tutorial.html.erb
+++ b/app/views/games/tutorial.html.erb
@@ -2,5 +2,5 @@
 
 <p><%= @description %></p>
 
-<%= button_to "Donate to #{@charityOne}", results_path, method: :get, :params => {:charity => 'hi'} %>
+<%= button_to "Donate to #{@charityOne}", results_path(:charity => @charityOne) %>
 <%= button_to "Donate to #{@charityTwo}", results_path(:charity => @charityTwo), :style => 'margin-top: 10px'%>
