not done implementing create new game page

--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,1 +1,7 @@
 <h1>Create a new Giving game </h1>
+
+<div class='form'>
+    <div class='input'>
+      <%= text_field :name => "Title" %>
+    </div>
+</div>
