--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Welcome to the Giving Game </h1>
 
+<% if flash[:notice] %>
+    <div class="notice"><%= flash[:notice] %><br /></div>
+<% end %>
+
 <li><%= link_to "Play Tutorial", tutorial_game_path %></li>
 <li><%= link_to "Play a giving game", play_game_path %></li>
 <li><%= link_to "Create a new giving game", new_game_path %></li>
