--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,7 +1,27 @@
 <h1>Create a new Giving game </h1>
 
 <div class='form'>
-    <div class='input'>
-      <%= text_field :name => "Title" %>
-    </div>
+    <%= form_tag create_game_path, method: :post do %>
+    
+    <h4>Name of Game</h4>
+    <div class='input'><%= text_field :game, :title, id: 'Title' %></div>
+    
+    <h4>Description</h4>
+    <div class='input'><%= text_field :game, :description, id: 'Description' %></div>
+    
+    <h4>Amount of Money</h4>
+    <div class='input'><%= text_field :game, :total_money, id: 'TotalMoney' %></div>
+    
+    <h4>Per Person Amount</h4>
+    <div class='input'><%= text_field :game, :per_transaction, id: 'AmountPerVote' %></div>
+    
+    <h4>Charity A</h4>
+    <div class='input'><%= text_field :game, :charityA_title, id: 'Charity A' %></div>
+    
+    <h4>Charity B</h4>
+    <div class='input'><%= text_field :game, :charityB_title, id: 'Charity B' %></div>
+    
+    <%= submit_tag 'Submit New Game' %>
+    
+    <% end %>
 </div>
