readded the $ to the create feature tests

--- a/app/views/games/play.html.erb
+++ b/app/views/games/play.html.erb
@@ -2,7 +2,7 @@
 
 <% @games.each do |game| %>
    Game Title: <%= game.title %><br />
-   Money Per Vote: <%= game.per_transaction %><br /><br />
+   Money Per Vote: $<%= game.per_transaction %><br /><br />
    <% @counter = @counter + 1%>
 <%end %>
 <br />
