--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,10 +1,20 @@
-<h1>Welcome to the Giving Game </h1>
+<head>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag "index_style.css" %>
+</head>
 
-<% if flash[:notice] %>
-    <div class="notice"><%= flash[:notice] %><br /></div>
-<% end %>
-
-<li><%= link_to "Play Tutorial", tutorial_game_path %></li>
-<li><%= link_to "Play a giving game", play_game_path %></li>
-<li><%= link_to "Create a new giving game", new_game_path %></li>
-
+<body>
+    <div id="header">
+        Welcome to the Giving Game!
+    </div>
+    <div id="container">
+        
+        <div id="flash"><% if flash[:notice] %><div class="notice"><%= flash[:notice] %></div><% end %></div>
+        
+        <div id="links_container">
+            <div class="link"><%= link_to "Play Tutorial", tutorial_game_path %></div>
+            <div class="link"><%= link_to "Play a giving game", play_game_path %></div>
+            <div class="link"><%= link_to "Create a new giving game", new_game_path %></div>
+        </div>
+    </div>
+</body>
