forgot to add $ to table contents in play

--- a/app/views/games/play.html.erb
+++ b/app/views/games/play.html.erb
@@ -14,7 +14,7 @@
       <% @games.each do |game| %>
          <tr>
             <td><%= game.title %></td>
-            <td><%= game.per_transaction %></td>
+            <td>$<%= game.per_transaction %></td>
          </tr>
          <% @counter = @counter + 1%>
       <% end %>
