--- a/app/views/games/home.html.erb
+++ b/app/views/games/home.html.erb
@@ -13,7 +13,7 @@
         
         <div id="links_container">
             <div class="link"><%= link_to "Play Tutorial", tutorial_game_path %></div>
-            <div class="link"><%= link_to "Play a giving game", play_game_path %></div>
+            <div class="link"><%= link_to "Play a giving game", play_index_path %></div>
             <div class="link"><%= link_to "Create a new giving game", new_game_path %></div>
         </div>
     </div>
