--- a/app/views/games/home.html.erb
+++ b/app/views/games/home.html.erb
@@ -1,6 +1,6 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <%= stylesheet_link_tag "index_style.css" %>
+    <%= stylesheet_link_tag "home_style.css" %>
 </head>
 
 <body>
