play game cuke scenario passes!

--- a/app/views/games/results.html.erb
+++ b/app/views/games/results.html.erb
@@ -1,3 +1,4 @@
 <h1>You have successfully donated!</h1>
 <p>Your choice: <%= @charity %></p>
-<%= @params %>
+
+<%= link_to "Go Back to Games List", play_index_path %>
