--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,25 @@
 </head>
 <body>
 
+
+<body>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div id="flash"><% if flash[:notice] %><div class="notice"><%= flash[:notice] %></div><% end %></div>
+    <div class="navbar-header">
+      <a class="navbar-brand">Giving Game</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><%= link_to 'Home', root_path%></li>
+      <li><%= link_to 'Create New Game', new_game_path%></li>
+      <li><%= link_to 'Play Tutorial', tutorial_game_path%></li> 
+      <li><%= link_to 'Play Game', play_index_path%></li> 
+    </ul>
+  </div>
+</nav>
+</body>
 <%= yield %>
+
 
 </body>
 </html>
