--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><%= link_to 'Home', root_path%></li>
       <li><%= link_to 'Create New Game', new_game_path%></li>
-      <li><%= link_to 'Play Tutorial', tutorial_game_path%></li> 
+      <li><%= link_to 'Play Tutorial', tutorial_game_path, id: 'nav_tutorial'%></li> 
       <li><%= link_to 'Play Game', play_index_path%></li> 
     </ul>
   </div>
