--- a/public/stylesheets/play_index_style.css
+++ b/public/stylesheets/play_index_style.css
@@ -14,6 +14,10 @@ tr:nth-child(even) {
     background-color: #f2f2f2
 }
 
+.third_col {
+    text-align: center;
+}
+
 th {
     background-color: #4785DC;
     color: white;
