mereged 2-2 and cuke tests pass

--- a/app/views/games/play_index.html.erb
+++ b/app/views/games/play_index.html.erb
@@ -6,7 +6,7 @@
 <body>
    <div id="header">Play an existing Giving Game</div>
 
-   <table>
+   <table class=games>
       <tr>
          <th>Game Title</th>
          <th>Money Per Vote</th>
