removed flash message from navbar. styled new.html.erb. added checkbox to designate tutorial in new.html.erb. added method to check no other game with same name in controller. removed unnecessary lines in seeds.rb. added few more tests in create_new_game.feature

--- a/public/stylesheets/play_index_style.css
+++ b/public/stylesheets/play_index_style.css
@@ -19,7 +19,7 @@ tr:nth-child(even) {
 }
 
 th {
-    background-color: #4785DC;
+    background-color: #D19E18;
     color: white;
     text-align: center;
     height: 30px;
