--- a/public/stylesheets/home_style.css
+++ b/public/stylesheets/home_style.css
@@ -10,6 +10,11 @@ body {
 	padding-top: 30px;
 }
 
+#flash {
+	text-align: center;
+	font-size: 150%;
+}
+
 #container {
 	width: 960px;
 	margin: 0px auto;
