--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -19,8 +19,14 @@
     <h4>Charity A</h4>
     <div class='field form-group'><%= text_field :game, :charityA_title, id: 'Charity A' %></div>
     
+    <h4>Description A</h4>
+    <div class='field form-group'><%= text_field :game, :charityA_description, id: 'Description A' %></div>
+    
     <h4>Charity B</h4>
     <div class='field form-group'><%= text_field :game, :charityB_title, id: 'Charity B' %></div>
+    
+    <h4>Description B</h4>
+    <div class='field form-group'><%= text_field :game, :charityB_description, id: 'Description B' %></div>
     
     
     <div class="actions form-group">
