--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -21,6 +21,9 @@
     
             <div class=form-header>Per Person Amount</div>
             <div class='field-form-group'><%= text_field :game, :per_transaction, id: 'AmountPerVote' %></div>
+
+            <div class=form-header>Charity A</div>
+            <div class='field-form-group'><%= text_field :game, :charityA_title, id: 'Charity A' %></div>
     
             <div class=form-header>Description A</div>
             <div class='field-form-group'><%= text_field :game, :descriptionA, id: 'Description A' %></div>
