pass @game to results controller

--- a/app/views/games/play_game.html.erb
+++ b/app/views/games/play_game.html.erb
@@ -2,17 +2,21 @@
 
 <p><%= @description %></p>
 
-<%= button_to "Donate to #{@charityOne}", results_path(:charity => @charityOne), :remote => true, :onclick => "vote_success('#{@charityOne}');" %>
-<%= button_to "Donate to #{@charityTwo}", results_path(:charity => @charityTwo), :remote => true, :onclick => "vote_success('#{@charityTwo}');", :style => 'margin-top: 10px'%>
+<%= button_to "Donate to #{@charityOne}", :remote => true, :onclick => "vote_success('#{@charityOne}', #{@showResults});" %>
+<%= button_to "Donate to #{@charityTwo}", :remote => true, :onclick => "vote_success('#{@charityTwo}', #{@showResults});", :style => 'margin-top: 10px'%>
 
 <script>
-    var vote_success = function(name) {
+    var vote_success = function(name, show_results) {
     sweetAlert({
         title: 'Donation Successful!',
         text: 'Your choice: ' + name,
         type: 'success',
     }, function() {
-        window.location = '<%= play_index_path %>'
+        if (show_results) {
+            window.location = '<%= results_path(:game => @game) %>';
+        } else {
+            window.location = '<%= play_index_path %>';
+        }
     });
 };
 </script>
