--- a/app/views/games/play_game.html.erb
+++ b/app/views/games/play_game.html.erb
@@ -1,9 +1,24 @@
-<h1>Play the game: <%=@title %></h1>
+<div class="container">
+    <div class="row">
+        <div class="page-header"><h1><small>Play the game:</small> <small class="game-name-header"><%=@title %></small></h1></div>
+    </div>
+    <div class="row top-buffer" style="text-align: center">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h4><%= @description %></h4>
+            </div>
+        </div>
+    </div>
+    <div class="row top-buffer">
+        <div class="col-lg-6" style="text-align: center">
+            <%= button_to "Donate to #{@charityOne}", results_path(:charity => @charityOne), :remote => true, :onclick => "vote_success('#{@charityOne}', #{@showResults});", :class => "btn btn-primary btn-lg" %>
+        </div>
+        <div class="col-lg-6" style="text-align: center">
+            <%= button_to "Donate to #{@charityTwo}", results_path(:charity => @charityTwo), :remote => true, :onclick => "vote_success('#{@charityTwo}', #{@showResults});",  :class => "btn btn-primary btn-lg"%>
+        </div>
+    </div>
+</div>
 
-<p><%= @description %></p>
-
-<%= button_to "Donate to #{@charityOne}", :remote => true, :onclick => "vote_success('#{@charityOne}', #{@showResults});" %>
-<%= button_to "Donate to #{@charityTwo}", :remote => true, :onclick => "vote_success('#{@charityTwo}', #{@showResults});", :style => 'margin-top: 10px'%>
 
 <script>
     var vote_success = function(name, show_results) {
@@ -13,10 +28,11 @@
         type: 'success',
     }, function() {
         if (show_results) {
-            window.location = '<%= results_path(:game => @game) %>';
+            window.location = '<%= results_path(:id => @game.id) %>';
         } else {
             window.location = '<%= play_index_path %>';
         }
     });
 };
 </script>
+
