add left-buffer css class

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -20,6 +20,13 @@
 
 .top-buffer
   margin-top: 50px
+  
+.game-name-header
+  color: #428bca
+  font-size: 28px
+  
+.left-buffer
+  margin-left: 15px
  
  
 @import "bootstrap-sprockets"
