--- a/app/views/games/play_game.html.erb
+++ b/app/views/games/play_game.html.erb
@@ -11,10 +11,10 @@
     </div>
     <div class="row top-buffer">
         <div class="col-lg-6" style="text-align: center">
-            <%= button_to "Donate to #{@charityOne}", results_path(:charity => @charityOne), :remote => true, :onclick => "vote_success('#{@charityOne}', #{@showResults});", :class => "btn btn-primary btn-lg" %>
+            <%= button_tag "Donate to #{@charityOne}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityOne}', #{@showResults});", :class => "btn btn-primary btn-lg" %>
         </div>
         <div class="col-lg-6" style="text-align: center">
-            <%= button_to "Donate to #{@charityTwo}", results_path(:charity => @charityTwo), :remote => true, :onclick => "vote_success('#{@charityTwo}', #{@showResults});",  :class => "btn btn-primary btn-lg"%>
+            <%= button_tag "Donate to #{@charityTwo}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityTwo}', #{@showResults});",  :class => "btn btn-primary btn-lg"%>
         </div>
     </div>
 </div>
@@ -22,17 +22,21 @@
 
 <script>
     var vote_success = function(name, show_results) {
-    sweetAlert({
-        title: 'Donation Successful!',
-        text: 'Your choice: ' + name,
-        type: 'success',
-    }, function() {
-        if (show_results) {
-            window.location = '<%= results_path(:id => @game.id) %>';
-        } else {
-            window.location = '<%= play_index_path %>';
-        }
-    });
-};
+        sweetAlert({
+            title: 'Donation Successful!',
+            text: 'Your choice: ' + name,
+            type: 'success',
+        }, function() {
+            if (show_results) {
+                if (name == '<%= @charityOne %>') {
+                    window.location = '<%= results_path(:id => @game.id, :charity => @charityOne) %>';
+                } else {
+                    window.location = '<%= results_path(:id => @game.id, :charity => @charityTwo) %>';
+                }
+            } else {
+                window.location = '<%= play_index_path %>';
+            }
+        });
+    };
 </script>
 
