--- a/app/views/games/play_game.html.erb
+++ b/app/views/games/play_game.html.erb
@@ -11,10 +11,10 @@
     </div>
     <div class="row top-buffer">
         <div class="col-lg-6" style="text-align: center">
-            <%= button_tag "Donate to #{@charityOne}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityOne}', #{@showResults});", :class => "btn btn-primary btn-lg" %>
+            <%= button_tag "Donate to #{@charityA}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityA}', #{@showResults});", :class => "btn btn-primary btn-lg" %>
         </div>
         <div class="col-lg-6" style="text-align: center">
-            <%= button_tag "Donate to #{@charityTwo}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityTwo}', #{@showResults});",  :class => "btn btn-primary btn-lg"%>
+            <%= button_tag "Donate to #{@charityB}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityB}', #{@showResults});",  :class => "btn btn-primary btn-lg"%>
         </div>
     </div>
 </div>
@@ -28,10 +28,10 @@
             type: 'success',
         }, function() {
             if (show_results) {
-                if (name == '<%= @charityOne %>') {
-                    window.location = '<%= results_path(:id => @game.id, :charity => @charityOne) %>';
+                if (name == '<%= @charityA %>') {
+                    window.location = '<%= results_path(:id => @game.id, :charity => @charityA) %>';
                 } else {
-                    window.location = '<%= results_path(:id => @game.id, :charity => @charityTwo) %>';
+                    window.location = '<%= results_path(:id => @game.id, :charity => @charityB) %>';
                 }
             } else {
                 window.location = '<%= play_index_path %>';
