--- a/app/views/games/tutorial.html.erb
+++ b/app/views/games/tutorial.html.erb
@@ -1,6 +1,41 @@
-<h1>Play the tutorial </h1>
+<div class="container">
+    <div class="row">
+        <div class="page-header"><h1><small>Play the tutorial</small></h1></div>
+    </div>
+    <div class="row top-buffer" style="text-align: center">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h4><%= @description %></h4>
+            </div>
+        </div>
+    </div>
+    <div class="row top-buffer">
+        <div class="col-lg-6" style="text-align: center">
+            <%= button_tag "Donate to #{@charityA}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityA}', #{@showResults});", :class => "btn btn-primary btn-lg" %>
+        </div>
+        <div class="col-lg-6" style="text-align: center">
+            <%= button_tag "Donate to #{@charityB}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityB}', #{@showResults});",  :class => "btn btn-primary btn-lg"%>
+        </div>
+    </div>
+</div>
 
-<p><%= @description %></p>
 
-<%= button_to "Donate to #{@charityOne}", results_path(:charity => @charityOne) %>
-<%= button_to "Donate to #{@charityTwo}", results_path(:charity => @charityTwo), :style => 'margin-top: 10px'%>
+<script>
+    var vote_success = function(name, show_results) {
+        sweetAlert({
+            title: 'Donation Successful!',
+            text: 'Your choice: ' + name,
+            type: 'success',
+        }, function() {
+            if (show_results) {
+                if (name == '<%= @charityA %>') {
+                    window.location = '<%= results_path(:id => @game.id, :charity => @charityA) %>';
+                } else {
+                    window.location = '<%= results_path(:id => @game.id, :charity => @charityB) %>';
+                }
+            } else {
+                window.location = '<%= play_index_path %>';
+            }
+        });
+    };
+</script>
