change how to get to results page to get cuke tests to pass... this sucks

--- a/app/views/games/play_game.html.erb
+++ b/app/views/games/play_game.html.erb
@@ -11,10 +11,16 @@
     </div>
     <div class="row top-buffer">
         <div class="col-lg-6" style="text-align: center">
-            <%= button_tag "Donate to #{@charityA}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityA}', #{@showResults});", :class => "btn btn-primary btn-lg" %>
+            <!--<%= button_tag "Donate to #{@charityA}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityA}', #{@showResults});", :class => "btn btn-primary btn-lg" %>-->
+            <% if @showResults %> <%= button_to "Donate to #{@charityA}", results_path(:id => @game.id, :charity => @charityA), :class => "btn btn-primary btn-lg" %>
+            <% else %> <%= button_to "Donate to #{@charityA}", play_index_path(:charity => @charityA), :class => "btn btn-primary btn-lg" %>
+            <% end %>
         </div>
         <div class="col-lg-6" style="text-align: center">
-            <%= button_tag "Donate to #{@charityB}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityB}', #{@showResults});",  :class => "btn btn-primary btn-lg"%>
+            <!--<%= button_tag "Donate to #{@charityB}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityB}', #{@showResults});", :class => "btn btn-primary btn-lg" %>-->
+            <% if @showResults %> <%= button_to "Donate to #{@charityB}", results_path(:id => @game.id, :charity => @charityB), :class => "btn btn-primary btn-lg" %>
+            <% else %> <%= button_to "Donate to #{@charityB}", play_index_path(:charity => @charityB), :class => "btn btn-primary btn-lg" %>
+            <% end %>
         </div>
     </div>
 </div>
@@ -28,10 +34,10 @@
             type: 'success',
         }, function() {
             if (show_results) {
-                if (name == '<%= @charityA %>') {
-                    window.location = '<%= results_path(:id => @game.id, :charity => @charityA) %>';
+                if (name == '<%= @charityOne %>') {
+                    window.location = '<%= results_path(:id => @game.id, :charity => @charityOne) %>';
                 } else {
-                    window.location = '<%= results_path(:id => @game.id, :charity => @charityB) %>';
+                    window.location = '<%= results_path(:id => @game.id, :charity => @charityTwo) %>';
                 }
             } else {
                 window.location = '<%= play_index_path %>';
