--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -27,6 +27,11 @@
     
             <div class=form-header>Description A</div>
             <div class='field-form-group'><%= text_field :game, :descriptionA, id: 'Description A' %></div>
+            
+            <!--some image uploader-->
+            <%= form_for @user, :url => users_path, :html => { :multipart => true } do |form| %>
+                <%= form.file_field :avatar %>
+            <% end %>
     
             <div class=form-header>Charity B</div>
             <div class='field-form-group'><%= text_field :game, :charityB_title, id: 'Charity B' %></div>
