--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -30,7 +30,7 @@
             
             <!--some image uploader-->
             <%= form_for @giving_game, :html => { :multipart => true } do |form| %>
-                <%= form.file_field :avatar %>
+                <%= form.file_field :giving_game %>
             <% end %>
     
             <div class=form-header>Charity B</div>
