iteration3-2 actually done, my back

--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -38,6 +38,9 @@
             <div class=form-header>Tutorial?</div>
             <div class='field-form-group'><%= check_box :game, :tutorial, {}, true, false %></div>
 
+            <div class=form-header>Show Results?</div>
+            <div class='field-form-group'><%= check_box :game, :show_results, {}, true, false %></div>
+
             <div class="actions-form-group">
                 <%= submit_tag 'Finish' %>
             </div>
