--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
 
     <div class="field">
       <%= f.label :username %><br />
-      <%= f.text_field :uid, autofocus: true %>
+      <%= f.text_field :username %>
     </div>
 
     <div class="field">
