--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -7,7 +7,7 @@
     <div id=container>
         <div id="flash"><% if flash[:notice] %><div class="notice"><%= flash[:notice] %></div><% end %></div>
         <div id=header>
-            <%= @user.uid %>'s Profile
+            <%= @user.username %>'s Profile
         </div>
         <div id=table-header>
             Edit Your Games
