remove hardcoded sloth description :(

--- a/app/views/games/play_game.html.erb
+++ b/app/views/games/play_game.html.erb
@@ -16,7 +16,7 @@
             </div>
             <div class="row" style="margin-bottom: 30px">
                  <div class="col-sm-6 col-sm-offset-3">
-                     <span style="text-align: center"><%= @descriptionA %>This is a random description of this charity that does things for sloths like feed them and pet them and make them happy.</span>
+                     <span style="text-align: center"><%= @descriptionA %></span>
                 </div>
             </div>
             <!--<%= button_tag "Donate to #{@charityA}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityA}', #{@showResults});", :class => "btn btn-primary btn-lg" %>-->
@@ -30,7 +30,7 @@
             </div>
             <div class="row" style="margin-bottom: 30px">
                 <div class="col-sm-6 col-sm-offset-3">
-                     <span style="text-align: center"><%= @descriptionB %>This is a random description of this charity that does things for sloths like feed them and pet them and make them happy.</span>
+                     <span style="text-align: center"><%= @descriptionB %></span>
                 </div>
             </div>
             <!--<%= button_tag "Donate to #{@charityB}", :type => "button", :remote => true, :onclick => "vote_success('#{@charityB}', #{@showResults});", :class => "btn btn-primary btn-lg" %>-->
