added see_results.feature and image uploading scenario in play_game.feature

--- a/public/stylesheets/play_index_style.css
+++ b/public/stylesheets/play_index_style.css
@@ -18,6 +18,9 @@ tr:nth-child(even) {
     text-align: center;
 }
 
+.results_col {
+    text-align: center;
+}
 
 th {
     background-color: #D19E18;
