Added results to user profile

--- a/app/views/games/results.html.erb
+++ b/app/views/games/results.html.erb
@@ -31,10 +31,12 @@
 </div>
 
 <script>
-    sweetAlert({
-        title: 'Donation Successful!',
-        text: 'Your choice: ' + '<%= @charityVotedFor %>',
-        type: 'success',
-    });
+    <% if @charityVotedFor != nil %>
+        sweetAlert({
+            title: 'Donation Successful!',
+            text: 'Your choice: ' + '<%= @charityVotedFor %>',
+            type: 'success',
+        });
+    <% end %>
 </script>
 
