--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
   </div>
 </nav>
 <body>
-<div class="well">
+<div class="container">
 <% flash.each do |name, msg| -%>
   <%= content_tag :div, msg, class:"alert alert-#{name}"%>
 <% end -%>
