--- a/app/views/games/archive.html.erb
+++ b/app/views/games/archive.html.erb
@@ -1,13 +1,18 @@
+<head>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag "play_index_style.css" %>
+</head>
+
 <div class="container">
     <div class="row">
         <div class="col-lg-10 col-lg-offset-1">
             <div class="page-header">
-                <h3>Archive for Expired Games</h3>
+                <h3>Archive for Expired Giving Games</h3>
             </div>
             <table class="table table-hover">
                 <thead>
                     <tr>
-                        <th>Game Title</th>
+                        <th style="text-align: left">Game Title</th>
                         <th>Goal</th>
                         <th>Money Per Vote</th>
                         <th>Can See Results</th>
@@ -15,8 +20,8 @@
                 </thead>
                 <tbody>
                     <% @games.each do |game| %>
-                        <tr>
-                            <td><%= link_to game.title, archive_results_path(game.id)%></a></td>
+                        <tr style="text-align: center">
+                            <td style="text-align: left"><%= link_to game.title, archive_results_path(game.id)%></a></td>
                             <td>$<%= game.total_money%></td>
                             <td>$<%= game.per_transaction %></td>
                             <td><% if game.show_results %>&#10004;<% end %></td>
