--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -2,7 +2,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag "new_style.css" %>
 </head>
-
+<% params %>
 <body>
     <div id="container" class="container">
         <div id="flash"><% if flash[:notice] %><div class="notice"><%= flash[:notice] %></div><% end %></div>
