--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
         </ul>
       </li>
       <li><%= link_to 'Play Game', play_index_path %></li>
+      <li><%= link_to 'View Expired Games', archive_path %></li>
       <li><% if user_signed_in? %>
           <%= link_to 'Profile', user_profile_path(current_user.id) %>
           <% end %></li>
