moved form to a partial

--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -8,44 +8,7 @@
         <div id="flash"><% if flash[:notice] %><div class="notice"><%= flash[:notice] %></div><% end %></div>
         <div id=header>Edit Giving game <%=@game.title %> </div>
 
-        <div class='form'>
-            <%= form_tag update_game_path(current_user.id, @game.id), method: :post do %>
-    
-            <div class=form-header>Name of Game</div>
-            <div class='field-form-group'><%= text_field :game, :title, id: 'Title' %></div>
-    
-            <div class=form-header>Description</div>
-            <div class='field-form-group'><%= text_field :game, :description, id: 'Description' %></div>
-    
-            <div class=form-header>Amount of Money</div>
-            <div class='field-form-group'><%= text_field :game, :total_money, id: 'TotalMoney' %></div>
-    
-            <div class=form-header>Per Person Amount</div>
-            <div class='field-form-group'><%= text_field :game, :per_transaction, id: 'AmountPerVote' %></div>
-
-            <div class=form-header>Charity A</div>
-            <div class='field-form-group'><%= text_field :game, :charityA_title, id: 'Charity A' %></div>
-    
-            <div class=form-header>Description A</div>
-            <div class='field-form-group'><%= text_field :game, :descriptionA, id: 'Description A' %></div>
-    
-            <div class=form-header>Charity B</div>
-            <div class='field-form-group'><%= text_field :game, :charityB_title, id: 'Charity B' %></div>
-    
-            <div class=form-header>Description B</div>
-            <div class='field-form-group'><%= text_field :game, :descriptionB, id: 'Description B' %></div>
-    
-            <div class=form-header>Tutorial?</div>
-            <div class='field-form-group'><%= check_box :game, :tutorial, {}, true, false %></div>
-
-            <div class=form-header>Show Results?</div>
-            <div class='field-form-group'><%= check_box :game, :show_results, {}, true, false %></div>
-
-            <div class="actions-form-group">
-                <%= submit_tag 'Finish' %>
-            </div>
-            <% end %>
-        </div>
+        <%= render 'giving_game_form' %>
         <%= link_to "Back", user_profile_path(current_user.id)%></a>
     </div>
 </body>
