--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -4,70 +4,12 @@
     <%= stylesheet_link_tag "new_style.css" %>
 </head>
 
-<script>
-    $(document).on('ready page:load', function () {
-    tinymce.remove();
-    tinymce.init({selector:'textarea'});
-    });    
-</script>
-
 <body>
     <div id="container" class="container">
         
         <div class='well'><div id=header>Create a new Giving game</div></div>
+        <%= render 'giving_game_form' %>
 
-        <div class='form'>
-            <%= form_tag create_game_path, method: :post do %>
-            <div class="row">
-            <div class=form-header>Name of Game</div>
-            <div class='field-form-group'><%= text_field :game, :title, id: 'Title', size: '65' %></div>
-            
-            <div class=form-header>Description</div>
-            <div class='field-form-group'><%= text_area :game, :description, id: 'Description', class: "tinymce"%></div>
-            </div>
-
-            <div class="row">
-                
-                <div class="col-sm-6">
-                <div class=form-header>Charity A</div>
-                <div class='field-form-group'><%= text_field :game, :charityA_title, id: 'Charity A', size: "50" %></div>
-    
-                <div class=form-header>Description A</div>
-                <div class='field-form-group'><%= text_area :game, :descriptionA, id: 'DescriptionA', class: 'tinymce' %></div>
-                </div>
-                
-                <div class="col-sm-6">
-                <div class=form-header>Charity B</div>
-                <div class='field-form-group'><%= text_field :game, :charityB_title, id: 'Charity B', size: "50" %></div>
-    
-                <div class=form-header>Description B</div>
-                <div class='field-form-group'><%= text_area :game, :descriptionB, id: 'DescriptionB', class: 'tinymce' %></div>
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="col-sm-6">
-                <div class=form-header>Goal Amount of Money to Reach</div>
-                <div class='field-form-group'><%= text_field :game, :total_money, id: 'TotalMoney' %></div>
-                </div>
-                
-                <div class="col-sm-6">
-                <div class=form-header>Per Person Amount</div>
-                <div class='field-form-group'><%= text_field :game, :per_transaction, id: 'AmountPerVote' %></div>
-                </div>
-            </div>
-    
-            <div class=form-header>Tutorial?</div>
-            <div class='field-form-group'><%= check_box :game, :tutorial, {}, true, false %></div>
-
-            <div class=form-header>Show Results?</div>
-            <div class='field-form-group'><%= check_box :game, :show_results, {}, true, false %></div>
-
-            <div class="actions-form-group">
-                <%= submit_tag 'Submit New Game' %>
-            </div>
-            <% end %>
-        </div>
     </div>
 </body>
 
