--- a/app/views/games/play_index.html.erb
+++ b/app/views/games/play_index.html.erb
@@ -8,6 +8,12 @@
       <div class="row">
          <div class="col-lg-10 col-lg-offset-1">
             <div class="page-header">
+               <div class="pull-right">
+                  <a class="btn btn-default btn-sm" href="archive">
+                     <i class="fa fa-hourglass-end" aria-hidden="true"></i>
+                     <span style="padding-left: 5px">Go to expired games</span>
+                  </a>
+               </div>
                <h3>Play an Existing Giving Game</h3>
             </div>
             <table class="table table-hover">
